# cmake-project-utils

./: .gitignore  .gitmodules  README.md
cmake_configs/: define_module.cmake  define_service.cmake  general_utils.cmake  global_definitions.cmake  testing.cmake
scripts/: setup.bash
tests/cpp/src/: CMakeLists.txt
tests/cpp/src/module_1/: CMakeLists.txt
tests/cpp/src/module_1/include/module_1/: test.h
tests/cpp/src/module_1/src/: test.cpp
tests/cpp/src/module_1/test/: module_1_test.cpp
tests/cpp/src/module_2/: CMakeLists.txt
tests/cpp/src/module_2/src/: main.cpp
tests/cpp/src/module_3/: CMakeLists.txt
tests/cpp/src/module_3/include/module_3/: mod_3_test.h
tests/cpp/src/module_3/src/: test.cpp
tests/cpp/src/module_4/: CMakeLists.txt
tests/cpp/src/module_4/include/module_4/: mod_4_test.h
tests/cpp/src/module_4/src/: test.cpp
